--- a/index.html
+++ b/index.html
@@ -3,9 +3,15 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Varun KV - Data Analyst</title>
+  <title>Varun Kammanni4 - Data Analyst</title>
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
   <link href="../styles.css" rel="stylesheet">
+  <style>
+    nav {
+      backdrop-filter: blur(8px);
+      -webkit-backdrop-filter: blur(8px);
+    }
+  </style>
 </head>
 <body class="bg-gray-50 font-sans text-gray-800">
   <nav class="bg-blue-900 text-white p-4 shadow-md">
@@ -19,7 +25,7 @@
     </div>
   </nav>
 
-  <section class="bg-blue-900 text-white py-24">
+  <section class="bg-blue-900 text-white py-24 shadow-xl rounded-lg mt-8 mb-8">
     <div class="container mx-auto text-center">
       <h2 class="text-5xl font-extrabold mb-4">Varun KV</h2>
       <p class="text-xl mb-6">Data Analyst & Insights Expert</p>
@@ -27,7 +33,7 @@
     </div>
   </section>
 
-  <section id="about" class="py-20 bg-gray-100">
+  <section id="about" class="py-20 bg-gray-100 shadow-md rounded-lg mt-8 mb-8">
     <div class="container mx-auto px-6">
       <h3 class="text-4xl font-bold text-center text-blue-900 mb-12">About Me</h3>
       <div class="flex flex-col lg:flex-row items-center justify-center gap-10">
@@ -42,7 +48,7 @@
     </div>
   </section>
 
-  <section id="resume" class="py-20 bg-white">
+  <section id="resume" class="py-20 bg-white shadow-md rounded-lg mt-8 mb-8">
     <div class="container mx-auto px-6">
       <h3 class="text-4xl font-bold text-center text-teal-700 mb-12">Resume Summary</h3>
       <div class="grid grid-cols-1 lg:grid-cols-2 gap-10 justify-items-center">
@@ -76,7 +82,7 @@
     </div>
   </section>
 
-  <section id="contact" class="py-20 bg-teal-700 text-white">
+  <section id="contact" class="py-20 bg-teal-700 text-white shadow-xl rounded-lg mt-8 mb-8">
     <div class="container mx-auto px-6 text-center">
       <h3 class="text-4xl font-bold mb-8">Get in Touch</h3>
       <p class="text-lg mb-6">Ready to collaborate? Connect with me!</p>
