--- a/pages/projects.html
+++ b/pages/projects.html
@@ -6,6 +6,12 @@
   <title>Projects - Varun KV</title>
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
   <link href="../styles.css" rel="stylesheet">
+  <style>
+    nav {
+      backdrop-filter: blur(8px);
+      -webkit-backdrop-filter: blur(8px);
+    }
+  </style>
 </head>
 <body class="bg-gray-50 font-sans text-gray-800">
   <nav class="bg-blue-900 text-white p-4 shadow-md">
@@ -19,7 +25,7 @@
     </div>
   </nav>
 
-  <section class="py-20 bg-white">
+  <section class="py-20 bg-white shadow-md rounded-lg mt-8 mb-8">
     <div class="container mx-auto px-6">
       <h3 class="text-4xl font-bold text-center text-teal-700 mb-12">My Projects</h3>
       <div class="grid grid-cols-1 md:grid-cols-1 lg:grid-cols-1 gap-8 justify-items-center">
@@ -35,7 +41,7 @@
     </div>
   </section>
 
-  <section id="contact" class="py-20 bg-teal-700 text-white">
+  <section id="contact" class="py-20 bg-teal-700 text-white shadow-xl rounded-lg mt-8 mb-8">
     <div class="container mx-auto px-6 text-center">
       <h3 class="text-4xl font-bold mb-8">Get in Touch</h3>
       <p class="text-lg mb-6">Ready to collaborate? Connect with me!</p>
