--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       <h3 class="text-4xl font-bold text-center text-blue-900 mb-12">About Me</h3>
       <div class="flex flex-col lg:flex-row items-center justify-center gap-10">
         <div class="w-full lg:w-1/2">
-          <img src="../assets/placeholder.png" alt="Varun KV" class="rounded-lg shadow-xl mx-auto w-3/4 lg:w-full">
+          <img src="assets/img/placeholder.png" alt="Varun KV" class="rounded-lg shadow-xl mx-auto w-3/4 lg:w-full">
         </div>
         <div class="w-full lg:w-1/2 text-center lg:text-left">
           <p class="text-lg mb-4">Experienced Data Analyst with over 6 years of combined expertise in project management and data analysis, with a strong focus on the healthcare, staffing, retail, and finance industries. Skilled in SQL, Python, Tableau, and Power BI, I specialize in uncovering actionable insights, streamlining operations, and building impactful dashboards that drive informed decision-making.</p>
@@ -82,13 +82,13 @@
     </div>
   </section>
 
-  <section id="contact" class="py-20 bg-teal-700 text-white shadow-xl rounded-lg mt-8 mb-8">
+  <section id="contact" class="py-20 bg-teal-700 text-black shadow-xl rounded-lg mt-8 mb-8">
     <div class="container mx-auto px-6 text-center">
       <h3 class="text-4xl font-bold mb-8">Get in Touch</h3>
       <p class="text-lg mb-6">Ready to collaborate? Connect with me!</p>
       <div class="flex justify-center space-x-6">
-        <a href="mailto:varun@example.com" class="bg-yellow-400 text-blue-900 px-6 py-3 rounded-lg font-semibold hover:bg-yellow-500 transition">Email</a>
-        <a href="https://linkedin.com/in/varunkv" class="bg-yellow-400 text-blue-900 px-6 py-3 rounded-lg font-semibold hover:bg-yellow-500 transition">LinkedIn</a>
+        <a href="mailto:varunkammanni@gmail.com" class="bg-yellow-400 text-blue-900 px-6 py-3 rounded-lg font-semibold hover:bg-yellow-500 transition">Email</a>
+        <a href="https://www.linkedin.com/in/varunkammanni/" class="bg-yellow-400 text-blue-900 px-6 py-3 rounded-lg font-semibold hover:bg-yellow-500 transition">LinkedIn</a>
       </div>
     </div>
   </section>
