--- a/pages/projects.html
+++ b/pages/projects.html
@@ -28,39 +28,50 @@
   <section class="py-20 bg-white shadow-md rounded-lg mt-8 mb-8">
     <div class="container mx-auto px-6">
       <h3 class="text-4xl font-bold text-center text-teal-700 mb-12">My Projects</h3>
-      <div class="grid grid-cols-1 md:grid-cols-1 lg:grid-cols-1 gap-8 justify-items-center">
-        <div class="bg-gray-50 p-6 rounded-lg shadow-md hover:shadow-lg transition w-full max-w-2xl">
-          <h4 class="text-xl font-semibold text-blue-900 mb-2">Tableau World Demo</h4>
-          <p class="text-gray-700 mb-4">An interactive Tableau visualization showcasing global data trends with animations, enabling dynamic exploration of insights as available on Tableau Public.</p>
-          <div class="tableauPlaceholder" id="viz1751991554074" style="position: relative">
+      <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-2 gap-10 justify-items-center">
+        <div class="bg-gray-50 p-8 rounded-lg shadow-md hover:shadow-lg transition w-full max-w-3xl flex flex-col items-center">
+          <h4 class="text-2xl font-semibold text-blue-900 mb-4">Tableau World Demo</h4>
+          <p class="text-gray-700 mb-6 text-center">An interactive Tableau visualization showcasing global data trends with animations, enabling dynamic exploration of insights as available on Tableau Public.</p>
+          <div class="tableauPlaceholder mx-auto" id="viz1751991554074" style="position: relative; width: 100%; min-height: 600px; max-width: 900px;">
             <noscript><a href="https://public.tableau.com/views/Section_5_World_Demo/Animation"><img alt="Animation - 1999" src="https://public.tableau.com/static/images/Se/Section_5_World_Demo/Animation/1_rss.png" style="border: none" /></a></noscript>
             <object class="tableauViz" style="display:none;"><param name="host_url" value="https%3A%2F%2Fpublic.tableau.com%2F" /><param name="embed_code_version" value="3" /><param name="site_root" value="" /><param name="name" value="Section_5_World_Demo/Animation" /><param name="tabs" value="no" /><param name="toolbar" value="yes" /><param name="static_image" value="https://public.tableau.com/static/images/Se/Section_5_World_Demo/Animation/1.png" /><param name="animate_transition" value="yes" /><param name="display_static_image" value="yes" /><param name="display_spinner" value="yes" /><param name="display_overlay" value="yes" /><param name="display_count" value="yes" /><param name="language" value="en-GB" /></object></div>
           <p class="text-sm text-teal-600 mt-4">Technologies: Tableau, SQL</p>
         </div>
         <!-- Project 2 -->
-        <div class="bg-gray-50 p-6 rounded-lg shadow-md hover:shadow-lg transition w-full max-w-2xl">
-          <h4 class="text-xl font-semibold text-blue-900 mb-2">Global Insights Dashboard</h4>
-          <p class="text-gray-700 mb-4">A Tableau dashboard providing interactive global insights and analytics, allowing users to explore data trends and patterns across multiple dimensions. <a href="https://public.tableau.com/shared/5GB6ZPWHF?:display_count=n&:origin=viz_share_link" class="text-blue-700 underline" target="_blank">View on Tableau Public</a></p>
-          <div class="tableauPlaceholder" id="viz2" style="position: relative">
+        <div class="bg-gray-50 p-8 rounded-lg shadow-md hover:shadow-lg transition w-full max-w-3xl flex flex-col items-center">
+          <h4 class="text-2xl font-semibold text-blue-900 mb-4">Global Insights Dashboard</h4>
+          <p class="text-gray-700 mb-6 text-center">A Tableau dashboard providing interactive global insights and analytics, allowing users to explore data trends and patterns across multiple dimensions. <a href="https://public.tableau.com/shared/5GB6ZPWHF?:display_count=n&:origin=viz_share_link" class="text-blue-700 underline" target="_blank">View on Tableau Public</a></p>
+          <div class="tableauPlaceholder mx-auto" id="viz2" style="position: relative; width: 100%; min-height: 600px; max-width: 900px;">
             <noscript><a href="https://public.tableau.com/shared/5GB6ZPWHF?:display_count=n&:origin=viz_share_link"><img alt="Global Insights Dashboard" src="https://public.tableau.com/static/images/5G/5GB6ZPWHF/1.png" style="border: none" /></a></noscript>
             <object class="tableauViz" style="display:none;"><param name="host_url" value="https%3A%2F%2Fpublic.tableau.com%2F" /><param name="embed_code_version" value="3" /><param name="site_root" value="" /><param name="name" value="5GB6ZPWHF" /><param name="tabs" value="no" /><param name="toolbar" value="yes" /><param name="static_image" value="https://public.tableau.com/static/images/5G/5GB6ZPWHF/1.png" /><param name="animate_transition" value="yes" /><param name="display_static_image" value="yes" /><param name="display_spinner" value="yes" /><param name="display_overlay" value="yes" /><param name="display_count" value="yes" /><param name="language" value="en-GB" /></object></div>
           <p class="text-sm text-teal-600 mt-4">Technologies: Tableau, Data Visualization</p>
         </div>
         <!-- Project 3 -->
-        <div class="bg-gray-50 p-6 rounded-lg shadow-md hover:shadow-lg transition w-full max-w-2xl">
-          <h4 class="text-xl font-semibold text-blue-900 mb-2">Clothes Industry Australia</h4>
-          <p class="text-gray-700 mb-4">An in-depth Tableau presentation analyzing the Australian clothes industry, featuring interactive charts and business insights. <a href="https://public.tableau.com/views/Section_4_Clothes_Industry_Australia/FinalPresentation?:language=en-GB&publish=yes&:sid=&:redirect=auth&:display_count=n&:origin=viz_share_link" class="text-blue-700 underline" target="_blank">View on Tableau Public</a></p>
-          <div class="tableauPlaceholder" id="viz3" style="position: relative">
+        <div class="bg-gray-50 p-8 rounded-lg shadow-md hover:shadow-lg transition w-full max-w-3xl flex flex-col items-center">
+          <h4 class="text-2xl font-semibold text-blue-900 mb-4">Clothes Industry Australia</h4>
+          <p class="text-gray-700 mb-6 text-center">An in-depth Tableau presentation analyzing the Australian clothes industry, featuring interactive charts and business insights. <a href="https://public.tableau.com/views/Section_4_Clothes_Industry_Australia/FinalPresentation?:language=en-GB&publish=yes&:sid=&:redirect=auth&:display_count=n&:origin=viz_share_link" class="text-blue-700 underline" target="_blank">View on Tableau Public</a></p>
+          <div class="tableauPlaceholder mx-auto" id="viz3" style="position: relative; width: 100%; min-height: 600px; max-width: 900px;">
             <noscript><a href="https://public.tableau.com/views/Section_4_Clothes_Industry_Australia/FinalPresentation?:language=en-GB&publish=yes&:sid=&:redirect=auth&:display_count=n&:origin=viz_share_link"><img alt="Clothes Industry Australia" src="https://public.tableau.com/static/images/Se/Section_4_Clothes_Industry_Australia/FinalPresentation/1.png" style="border: none" /></a></noscript>
             <object class="tableauViz" style="display:none;"><param name="host_url" value="https%3A%2F%2Fpublic.tableau.com%2F" /><param name="embed_code_version" value="3" /><param name="site_root" value="" /><param name="name" value="Section_4_Clothes_Industry_Australia/FinalPresentation" /><param name="tabs" value="no" /><param name="toolbar" value="yes" /><param name="static_image" value="https://public.tableau.com/static/images/Se/Section_4_Clothes_Industry_Australia/FinalPresentation/1.png" /><param name="animate_transition" value="yes" /><param name="display_static_image" value="yes" /><param name="display_spinner" value="yes" /><param name="display_overlay" value="yes" /><param name="display_count" value="yes" /><param name="language" value="en-GB" /></object></div>
           <p class="text-sm text-teal-600 mt-4">Technologies: Tableau, Business Analytics</p>
         </div>
-        <!-- Project 4 (placeholder for future) -->
-        <div class="bg-gray-50 p-6 rounded-lg shadow-md hover:shadow-lg transition w-full max-w-2xl">
-          <h4 class="text-xl font-semibold text-blue-900 mb-2">Additional Tableau Project</h4>
-          <p class="text-gray-700 mb-4">A future Tableau project will be showcased here. Stay tuned for more interactive data stories and dashboards.</p>
-          <div class="tableauPlaceholder" style="position: relative; min-height: 200px; background: #e0e7ef; display: flex; align-items: center; justify-content: center; color: #1e3a8a; font-weight: 600;">Coming Soon</div>
-          <p class="text-sm text-teal-600 mt-4">Technologies: Tableau</p>
+        <!-- Project 4 -->
+        <div class="bg-gray-50 p-8 rounded-lg shadow-md hover:shadow-lg transition w-full max-w-3xl flex flex-col items-center">
+          <h4 class="text-2xl font-semibold text-blue-900 mb-4">Retail Sales USA</h4>
+          <p class="text-gray-700 mb-6 text-center">A comprehensive Tableau dashboard visualizing retail sales trends across the USA, with interactive filters and detailed analytics. <a href="https://public.tableau.com/views/Section_6_Retail_Sales_USA_17519498877730/Dashboard1?:language=en-GB&:sid=&:redirect=auth&:display_count=n&:origin=viz_share_link" class="text-blue-700 underline" target="_blank">View on Tableau Public</a></p>
+          <div class="tableauPlaceholder mx-auto" id="viz4" style="position: relative; width: 100%; min-height: 600px; max-width: 900px;">
+            <noscript><a href="https://public.tableau.com/views/Section_6_Retail_Sales_USA_17519498877730/Dashboard1?:language=en-GB&:sid=&:redirect=auth&:display_count=n&:origin=viz_share_link"><img alt="Retail Sales USA" src="https://public.tableau.com/static/images/Se/Section_6_Retail_Sales_USA_17519498877730/Dashboard1/1.png" style="border: none" /></a></noscript>
+            <object class="tableauViz" style="display:none;"><param name="host_url" value="https%3A%2F%2Fpublic.tableau.com%2F" /><param name="embed_code_version" value="3" /><param name="site_root" value="" /><param name="name" value="Section_6_Retail_Sales_USA_17519498877730/Dashboard1" /><param name="tabs" value="no" /><param name="toolbar" value="yes" /><param name="static_image" value="https://public.tableau.com/static/images/Se/Section_6_Retail_Sales_USA_17519498877730/Dashboard1/1.png" /><param name="animate_transition" value="yes" /><param name="display_static_image" value="yes" /><param name="display_spinner" value="yes" /><param name="display_overlay" value="yes" /><param name="display_count" value="yes" /><param name="language" value="en-GB" /></object></div>
+          <p class="text-sm text-teal-600 mt-4">Technologies: Tableau, Data Analytics</p>
+        </div>
+        <!-- Project 5 -->
+        <div class="bg-gray-50 p-8 rounded-lg shadow-md hover:shadow-lg transition w-full max-w-3xl flex flex-col items-center">
+          <h4 class="text-2xl font-semibold text-blue-900 mb-4">Interactive Data Story</h4>
+          <p class="text-gray-700 mb-6 text-center">An interactive Tableau data story with advanced visualizations and storytelling features. <a href="https://public.tableau.com/shared/FKQ4PSD4T?:display_count=n&:origin=viz_share_link" class="text-blue-700 underline" target="_blank">View on Tableau Public</a></p>
+          <div class="tableauPlaceholder mx-auto" id="viz5" style="position: relative; width: 100%; min-height: 600px; max-width: 900px;">
+            <noscript><a href="https://public.tableau.com/shared/FKQ4PSD4T?:display_count=n&:origin=viz_share_link"><img alt="Interactive Data Story" src="https://public.tableau.com/static/images/FK/FKQ4PSD4T/1.png" style="border: none" /></a></noscript>
+            <object class="tableauViz" style="display:none;"><param name="host_url" value="https%3A%2F%2Fpublic.tableau.com%2F" /><param name="embed_code_version" value="3" /><param name="site_root" value="" /><param name="name" value="FKQ4PSD4T" /><param name="tabs" value="no" /><param name="toolbar" value="yes" /><param name="static_image" value="https://public.tableau.com/static/images/FK/FKQ4PSD4T/1.png" /><param name="animate_transition" value="yes" /><param name="display_static_image" value="yes" /><param name="display_spinner" value="yes" /><param name="display_overlay" value="yes" /><param name="display_count" value="yes" /><param name="language" value="en-GB" /></object></div>
+          <p class="text-sm text-teal-600 mt-4">Technologies: Tableau, Storytelling</p>
         </div>
       </div>
     </div>
@@ -108,6 +119,26 @@
         scriptElement3.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';
         vizElement3.parentNode.insertBefore(scriptElement3, vizElement3);
       }
+      // Project 4
+      const divElement4 = document.getElementById('viz4');
+      if (divElement4) {
+        const vizElement4 = divElement4.getElementsByTagName('object')[0];
+        vizElement4.style.width = '100%';
+        vizElement4.style.height = (divElement4.offsetWidth * 0.75) + 'px';
+        const scriptElement4 = document.createElement('script');
+        scriptElement4.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';
+        vizElement4.parentNode.insertBefore(scriptElement4, vizElement4);
+      }
+      // Project 5
+      const divElement5 = document.getElementById('viz5');
+      if (divElement5) {
+        const vizElement5 = divElement5.getElementsByTagName('object')[0];
+        vizElement5.style.width = '100%';
+        vizElement5.style.height = (divElement5.offsetWidth * 0.75) + 'px';
+        const scriptElement5 = document.createElement('script');
+        scriptElement5.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';
+        vizElement5.parentNode.insertBefore(scriptElement5, vizElement5);
+      }
       // Responsive resize for all
       function resizeViz(divId) {
         const div = document.getElementById(divId);
@@ -122,6 +153,8 @@
         resizeViz('viz1751991554074');
         resizeViz('viz2');
         resizeViz('viz3');
+        resizeViz('viz4');
+        resizeViz('viz5');
       });
     });
   </script>
